<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="40dp"
    android:background="@drawable/dialog_plan_info_background">
    <TextView
        android:id="@+id/infoPlanTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        tools:text="Plan Name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/infoPlanType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        tools:text="Type"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoPlanTitle" />

    <TextView
        android:id="@+id/infoPlanDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        tools:text="Difficulty"
        android:textSize="15sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoPlanType" />

    <TextView
        android:id="@+id/infoLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        tools:text="Length"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/infoPlanDifficulty"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoPlanDifficulty" />

    <TextView
        android:id="@+id/infoEquipment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Equipment"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toEndOf="@+id/infoPlanDifficulty"
        app:layout_constraintTop_toTopOf="@+id/infoLength" />

    <ImageView
        android:id="@+id/infoBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="13dp"
        android:background="@drawable/custom_button"
        android:contentDescription="@string/info_title_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoLength"/>

    <TextView
        android:id="@+id/infoInfoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/info_info_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/infoBackground"
        app:layout_constraintStart_toStartOf="@+id/infoBackground"
        app:layout_constraintTop_toTopOf="@+id/infoBackground" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoBackground" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dialogRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="325dp"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/buttonStartPlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_button"
        android:padding="5dp"
        android:text="@string/button_start_plan"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogRecyclerView" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_button"
        android:padding="5dp"
        android:text="@string/button_cancel"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/buttonStartPlan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonStartPlan"
        app:layout_constraintTop_toTopOf="@+id/buttonStartPlan" />
</androidx.constraintlayout.widget.ConstraintLayout>